[project]
name = "bitoasis-mcp"
version = "0.2.0"
description = "MCP server for the BitOasis cryptocurrency exchange API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BitOasis Technologies", email = "support@bitoasis.net" },
]
keywords = ["mcp", "bitoasis", "cryptocurrency", "exchange", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/bit-oasis/bitoasis-mcp"
Repository = "https://github.com/bit-oasis/bitoasis-mcp"
Issues = "https://github.com/bit-oasis/bitoasis-mcp/issues"

[project.scripts]
bitoasis-mcp = "bitoasis_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
